--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -123,7 +123,7 @@
   &__date-dropdown {
     margin-bottom: 41px;
   }
-  &__filter-date {
+  &__filter-date-dropdown {
     width: 266px;
     margin-bottom: 40px;
   }
