--- a/src/pages/websitePages/search-room/search-room.scss
+++ b/src/pages/websitePages/search-room/search-room.scss
@@ -27,7 +27,7 @@
       margin-right: 0;
     }
   }
-  &__filter-date {
+  &__filter-date-dropdown {
     margin-bottom: 20px;
   }
   &__guest-dropdown {
