--- a/src/components/booking-room-card/booking-room-card.pug
+++ b/src/components/booking-room-card/booking-room-card.pug
@@ -17,7 +17,7 @@ mixin booking-room-card({ number, costForDay, isLux })
           .booking-room-card__cost-for-day #{costForDay}&#8381;
           .booking-room-card__text в сутки
         .booking-room-card__date-dropdown.js-booking-room-card__date-dropdown
-          +date-dropdown({ title1: 'Прибытие', title2: 'Выезд' })
+          +date-dropdown({ title: 'Прибытие', title2: 'Выезд' })
         .booking-room-card__dropdown.js-booking-room-card__dropdown
           +dropdown({ title: 'Гости', elements: consts.dropdownInBookRoomCard, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
         .booking-room-card__calculate
