--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,13 +1,20 @@
-mixin date-dropdown({ title1, title2 })
+mixin date-dropdown({ isFilter=false, title, title2 })
 
-  .date-dropdown.js-date-dropdown
-    .date-dropdown__date
-      .date-dropdown__title= title1
+  if (isFilter)
+    .date-dropdown.js-date-dropdown
+      .date-dropdown__title= title
       .date-dropdown__wrapper.js-date-dropdown__wrapper
-        .date-dropdown__arrow.js-dropdown__arrow expand_more
-        input.date-dropdown__input.js-date-dropdown__input-1(type="text", placeholder="дд.мм.гггг", readonly)
-    .date-dropdown__date
-      .date-dropdown__title= title2
-      .date-dropdown__wrapper.js-date-dropdown__wrapper
-        .date-dropdown__arrow.js-dropdown__arrow expand_more
-        input.date-dropdown__input.js-date-dropdown__input-2(type="text", placeholder="дд.мм.гггг", readonly)
+        .date-dropdown__arrow expand_more
+        input.date-dropdown__input.js-date-dropdown__input(type="text", placeholder="19 авг - 23 авг", readonly)
+  else
+    .date-dropdown.date-dropdown_has-two-inputs.js-date-dropdown
+      .date-dropdown__date
+        .date-dropdown__title= title
+        .date-dropdown__wrapper.date-dropdown__wrapper_size_small.js-date-dropdown__wrapper
+          .date-dropdown__arrow.js-dropdown__arrow expand_more
+          input.date-dropdown__input.js-date-dropdown__input-1(type="text", placeholder="ДД.ММ.ГГГГ.", readonly)
+      .date-dropdown__date
+        .date-dropdown__title= title2
+        .date-dropdown__wrapper.date-dropdown__wrapper_size_small.js-date-dropdown__wrapper
+          .date-dropdown__arrow.js-dropdown__arrow expand_more
+          input.date-dropdown__input.js-date-dropdown__input-2(type="text", placeholder="ДД.ММ.ГГГГ.", readonly)
