--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -91,7 +91,7 @@
     font-weight: bold;
     text-transform: uppercase;
   }
-  &__button {
+  &__button-minus {
     font-family: $font-main;
     font-size: 1.125rem;
     color: $color-main-50;
@@ -106,10 +106,8 @@
     outline: none;
     user-select: none;
     transition: color 0.2s, border-color 0.2s, box-shadow 0.1s;
-    &_with-margin {
-      margin-left: auto;
-      margin-right: 2rem;
-    }
+    margin-left: auto;
+    margin-right: 2rem;
     &:disabled {
       color: $color-main-1;
       border-color: $color-main-1;
@@ -128,6 +126,34 @@
     font-weight: bold;
     right: 2.6875rem;
     user-select: none;
+  }
+  &__button-plus {
+    font-family: $font-main;
+    font-size: 1.125rem;
+    color: $color-main-50;
+    border: 1px solid $color-main-25;
+    width: 1.875rem;
+    height: 1.875rem;
+    text-align: center;
+    background: none;
+    border-radius: 50%;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+    user-select: none;
+    transition: color 0.2s, border-color 0.2s, box-shadow 0.1s;
+    &:disabled {
+      color: $color-main-1;
+      border-color: $color-main-1;
+      cursor: auto;
+    }
+    &:hover:enabled {
+      color: white;
+      background-color: #616175;
+    }
+    &:active:enabled {
+      box-shadow: inset 0 0px 7px 3px #101013;
+    }
   }
   &__bottom-buttons {
     display: flex;
