Removed reassign styles in date-dropdown.js #22

--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -103,6 +103,11 @@
       visibility: hidden;
     }
   }
+  &_size {
+    &_small {
+      width: 266px;
+    }
+  }
   &--pointer {
     display: none;
   }
