--- a/src/pages/websitePages/search-room/search-room.pug
+++ b/src/pages/websitePages/search-room/search-room.pug
@@ -49,28 +49,28 @@ block content
           .search-room__title Номера, которые мы для вас подобрали
           .search-room__room-cards
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room1.jpg', 'room2.jpg', 'room3.jpg', 'room4.jpg'], number: '888', isLux: true, costForDay: '9 990', activeStars: 5, numOfComments: '145' })
+              +room-card(consts.roomCard1)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room2.jpg', 'room3.jpg', 'room4.jpg', 'room5.jpg'], number: '840', costForDay: '9 990', activeStars: 4, numOfComments: '65' })
+              +room-card(consts.roomCard2)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room3.jpg', 'room4.jpg', 'room5.jpg', 'room6.jpg'], number: '980', isLux: true, costForDay: '8 500', activeStars: 3, numOfComments: '35' })
+              +room-card(consts.roomCard3)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room4.jpg', 'room5.jpg', 'room6.jpg', 'room7.jpg'], number: '856', costForDay: '7 300', activeStars: 5, numOfComments: '19' })
+              +room-card(consts.roomCard4)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room5.jpg', 'room6.jpg', 'room7.jpg', 'room8.jpg'], number: '740', costForDay: '6 000', activeStars: 4, numOfComments: '44' })
+              +room-card(consts.roomCard5)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room6.jpg', 'room7.jpg', 'room8.jpg', 'room9.jpg'], number: '982', costForDay: '5 800', activeStars: 3, numOfComments: '56' })
+              +room-card(consts.roomCard6)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room7.jpg', 'room8.jpg', 'room9.jpg', 'room10.jpg'], number: '678', costForDay: '5 500', activeStars: 5, numOfComments: '45' })
+              +room-card(consts.roomCard7)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room8.jpg', 'room9.jpg', 'room10.jpg', 'room11.jpg'], number: '450', costForDay: '5 300', activeStars: 4, numOfComments: '39' })
+              +room-card(consts.roomCard8)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room9.jpg', 'room10.jpg', 'room11.jpg', 'room12.jpg'], number: '350', costForDay: '5 000', activeStars: 3, numOfComments: '77' })
+              +room-card(consts.roomCard9)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room10.jpg', 'room11.jpg', 'room12.jpg', 'room1.jpg'], number: '666', costForDay: '5 000', activeStars: 5, numOfComments: '25' })
+              +room-card(consts.roomCard10)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room11.jpg', 'room12.jpg', 'room1.jpg', 'room2.jpg'], number: '444', costForDay: '5 000', activeStars: 3, numOfComments: '15' })
+              +room-card(consts.roomCard11)
             .search-room__room-card.js-search-room__room-card
-              +room-card({ images: ['room12.jpg', 'room1.jpg', 'room2.jpg', 'room3.jpg'], number: '352', costForDay: '5 000', activeStars: 3, numOfComments: '55' })
+              +room-card(consts.roomCard12)
           .search-room__pagination
             +pagination({ current: 1, last: 15, caption: '1 - 12 из 100+ вариантов аренды' })
