Fixed empty text nodes #23

--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -4,4 +4,4 @@ mixin checkbox({ label, isChecked })
     label.checkbox__label
       input.checkbox__input(type="checkbox", name=label, checked=isChecked)
       span.checkbox__box
-      = label
+      span.checkbox__text= label
