--- a/src/components/rich-checkbox/rich-checkbox.pug
+++ b/src/components/rich-checkbox/rich-checkbox.pug
@@ -8,5 +8,5 @@ mixin rich-checkbox({ richCheckboxes })
         label.rich-checkbox__label
           input.rich-checkbox__input(type="checkbox", name=label)
           span.rich-checkbox__box
-          = label
+          span.rich-checkbox__text= label
         .rich-checkbox__description= description
