--- a/src/components/toggle/toggle.pug
+++ b/src/components/toggle/toggle.pug
@@ -4,4 +4,4 @@ mixin toggle({ label, isChecked })
     label.toggle__label
       input.toggle__input(type="checkbox", name=label, checked=isChecked)
       span.toggle__box
-      = label
+      span.toggle__text= label
