--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -3,7 +3,7 @@
 .comment {
   width: 100%;
   font-size: 0.875rem;
-  color: $color-main-75;
+  color: $main-color-dark;
   &__author {
     display: flex;
     margin-bottom: 7px;
