--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -5,7 +5,7 @@
   align-items: center;
   min-width: 2.5rem;
   height: 1.25rem;
-  border: solid 1px $color-main-25;
+  border: solid 1px $main-color-light;
   background: white;
   background-clip: padding-box;
   position: relative;
@@ -25,7 +25,7 @@
       z-index: -1;
       margin: -1px;
       border-radius: inherit;
-      background: $color-secondary-gradient;
+      background: $secondary-color-gradient;
     }
   }
   &__heart {
@@ -33,9 +33,9 @@
     width: 1.1875rem;
     text-align: center;
     font-size: 0.625rem;
-    color: $color-main-25;
+    color: $main-color-light;
     &_liked {
-      color: $color-secondary;
+      color: $secondary-color;
     }
   }
   &__count {
@@ -43,9 +43,9 @@
     margin-right: 2px;
     font-size: 0.5625rem;
     line-height: 0.75rem;
-    color: $color-main-25;
+    color: $main-color-light;
     &_liked {
-      color: $color-secondary;
+      color: $secondary-color;
     }
   }
 }
