--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -11,10 +11,10 @@
   }
   &__title {
     font-weight: bold;
-    color: $color-main-100;
+    color: $main-color-darker;
   }
   &__result {
-    color: $color-main-50;
+    color: $main-color;
   }
 }
 .irs--round {
@@ -23,7 +23,7 @@
 .irs--round .irs-line {
   height: 6px;
   background: #fff;
-  border: 1px solid $color-main-25;
+  border: 1px solid $main-color-light;
   border-radius: 3px;
   box-sizing: border-box;
   top: 23px;
@@ -31,7 +31,7 @@
 .irs--round .irs-handle {
   width: 12px;
   height: 12px;
-  background: $color-tertiary-gradient;
+  background: $tertiary-color-gradient;
   border: 2px solid #fff;
   border-radius: 10px;
   box-sizing: content-box;
@@ -41,7 +41,7 @@
 }
 .irs--round .irs-bar {
   height: 6px;
-  background: $color-tertiary-gradient;
+  background: $tertiary-color-gradient;
   top: 23px;
 }
 .irs-handle {
