--- a/src/pages/websitePages/index/index.scss
+++ b/src/pages/websitePages/index/index.scss
@@ -9,7 +9,7 @@
     border-radius: 5px;
   }
   &__link {
-    color: $color-main-100;
+    color: $main-color-darker;
     font-size: 18px;
   }
 }
