--- a/src/pages/websitePages/landing-page/landing-page.scss
+++ b/src/pages/websitePages/landing-page/landing-page.scss
@@ -23,7 +23,7 @@
     font-size: 0.875rem;
     line-height: 1.5rem;
     text-align: right;
-    color: $color-main-75;
+    color: $main-color-dark;
     width: 297px;
     align-self: flex-end;
     margin-top: 318px;
