--- a/src/components/abouts-room/abouts-room.scss
+++ b/src/components/abouts-room/abouts-room.scss
@@ -3,7 +3,7 @@
 .about-room {
   width: 100%;
   display: flex;
-  border-bottom: 1px solid $color-main-1;
+  border-bottom: 1px solid $main-color-lighter;
   margin-bottom: 20px;
   &:last-child {
     margin-bottom: 0px;
@@ -12,10 +12,10 @@
   &__icon {
     font-family: $material-icons;
     font-size: 3rem;
-    background: $color-secondary-gradient;
+    background: $secondary-color-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    color: $color-secondary;
+    color: $secondary-color;
     margin-right: 10px;
     padding-bottom: 20px;
     user-select: none;
