--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -18,8 +18,8 @@
     line-height: 1.875rem;
   }
   &__number {
-    font-family: $font-secondary-reserve;
-    color: $color-main-100;
+    font-family: $secondary-font-reserve;
+    color: $main-color-darker;
     font-size: 1.5rem;
     margin-left: 4px;
     &_no-lux {
@@ -28,16 +28,16 @@
   }
   &__lux {
     margin-left: 5px;
-    color: $color-secondary;
+    color: $secondary-color;
     font-size: 0.75rem;
     margin-right: auto;
   }
   &__cost-for-day {
-    color: $color-main-50;
+    color: $main-color;
     margin-right: 4px;
   }
   &__text {
-    color: $color-main-50;
+    color: $main-color;
     font-weight: normal;
     font-size: 0.75rem;
   }
@@ -51,7 +51,7 @@
     margin-bottom: 28px;
     font-size: 0.875rem;
     line-height: 1.5rem;
-    color: $color-main-75;
+    color: $main-color-dark;
   }
   &__row {
     display: flex;
@@ -78,11 +78,11 @@
       font-size: 0.75rem;
       line-height: 1.25rem;
       font-weight: bold;
-      color: $color-main-25;
+      color: $main-color-light;
       text-align: center;
       width: 1.25rem;
       height: 1.25rem;
-      border: 1px solid $color-main-25;
+      border: 1px solid $main-color-light;
       border-radius: 50%;
       box-sizing: border-box;
     }
@@ -96,12 +96,12 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    font-family: $font-secondary-reserve;
+    font-family: $secondary-font-reserve;
     font-size: 1.1875rem;
     font-weight: bold;
   }
   &__border {
     flex-grow: 1;
-    border-bottom: 1px dashed $color-main-25;
+    border-bottom: 1px dashed $main-color-light;
   }
 }
