--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -8,7 +8,7 @@
     position: relative;
     font-size: 0.875rem;
     line-height: 1.5rem;
-    color: $color-main-75;
+    color: $main-color-dark;
     margin-bottom: 10px;
     padding-left: 21px;
     &:last-child {
@@ -19,7 +19,7 @@
       position: absolute;
       width: 0.625rem;
       height: 0.625rem;
-      background: $color-main-25;
+      background: $main-color-light;
       border-radius: 50%;
       margin-left: -21px;
       top: 0.375rem;
