--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -6,7 +6,7 @@
     padding-left: 30px;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $color-main-50;
+    color: $main-color;
     cursor: pointer;
   }
   &__input {
@@ -15,7 +15,7 @@
     -moz-appearance: none;
     appearance: none;
     &:checked + .checkbox__box {
-      border-color: $color-secondary;
+      border-color: $secondary-color;
     }
     &:checked + .checkbox__box::before {
       content: '';
@@ -25,9 +25,9 @@
       width: 0.375rem;
       height: 0.5rem;
       border-width: 0 2px 2px 0;
-      -moz-border-image: $color-secondary-gradient;
-      -webkit-border-image: $color-secondary-gradient;
-      border-image: $color-secondary-gradient;
+      -moz-border-image: $secondary-color-gradient;
+      -webkit-border-image: $secondary-color-gradient;
+      border-image: $secondary-color-gradient;
       border-color: transparent;
       border-image-slice: 1;
       border-style: solid;
@@ -42,7 +42,7 @@
     height: 1.25rem;
     box-sizing: border-box;
     margin-left: -30px;
-    border: 1px solid $color-main-25;
+    border: 1px solid $main-color-light;
     border-radius: 4px;
     background-color: white;
   }
