--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -20,7 +20,7 @@
   &__text {
     font-size: 0.875rem;
     line-height: 1.5rem;
-    color: $color-main-75;
+    color: $main-color-dark;
     text-align: center;
     margin-bottom: 27px;
   }
