--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -49,7 +49,7 @@
       margin-left: 5px;
       margin-right: 20px;
       padding: 10px;
-      border-bottom: 1px solid $color-main-1;
+      border-bottom: 1px solid $main-color-lighter;
       &:last-child {
         border-bottom: none;
       }
@@ -73,7 +73,7 @@
   &__text {
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $color-main-50;
+    color: $main-color;
     text-decoration: none;
     @media (max-width: 760px) {
       font-size: 20px;
@@ -82,7 +82,7 @@
   &__submenu-text {
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $color-main-50;
+    color: $main-color;
     text-decoration: none;
     padding: 5px 2px;
     @media (max-width: 760px) {      
@@ -94,7 +94,7 @@
   &__arrow {
     font-family: $material-icons;
     font-size: 1.5rem;
-    color: $color-main-50;
+    color: $main-color;
     line-height: 1.25rem;
     width: 1.5rem;
     height: 1.3125rem;
@@ -105,7 +105,7 @@
     display: none;
     font-family: $material-icons;
     font-size: 2.1875rem;
-    color: $color-secondary;
+    color: $secondary-color;
     cursor: pointer;
     user-select: none;
     @media (max-width: 1000px) {
@@ -119,9 +119,9 @@
   &__username {
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $color-main-50;
+    color: $main-color;
     text-decoration: none;
-    border-left: 1px solid $color-main-25;
+    border-left: 1px solid $main-color-light;
     padding-left: 30px;
     margin-left: 10px;
     cursor: pointer;
@@ -167,14 +167,14 @@
     @media (max-width: 1000px) {
       padding: 10px;
       margin: 0 5px;
-      border-bottom: 1px solid $color-main-1;
+      border-bottom: 1px solid $main-color-lighter;
     }
   }
   &__burger {
     display: none;
     font-family: $material-icons;
     font-size: 2.5625rem;
-    color: $color-secondary;
+    color: $secondary-color;
     cursor: pointer;
     user-select: none;
     @media (max-width: 760px) {
