--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -10,7 +10,7 @@
     width: 2.5rem;
     font-size: 0.75rem;
     line-height: 2.5rem;
-    color: $color-main-50;
+    color: $main-color;
     text-align: center;
     border-radius: 22px;
     user-select: none;
@@ -23,9 +23,9 @@
       cursor: default;
       font-weight: bold;
       color: white;
-      background: $color-secondary-gradient;
+      background: $secondary-color-gradient;
       &:hover {
-        background: $color-secondary-gradient;
+        background: $secondary-color-gradient;
       }
     }
   }
@@ -33,7 +33,7 @@
     width: 2.5rem;
     font-size: 0.75rem;
     line-height: 2.5rem;
-    color: $color-main-50;
+    color: $main-color;
     text-align: center;
     border-radius: 22px;
     user-select: none;
@@ -44,7 +44,7 @@
     line-height: 2.5rem;
     font-family: $material-icons;
     color: white;
-    background: $color-tertiary-gradient;
+    background: $tertiary-color-gradient;
     text-align: center;
     border-radius: 22px;
     user-select: none;
@@ -58,7 +58,7 @@
   }
   &__caption {
     font-size: 0.875rem;
-    color: $color-main-75;
+    color: $main-color-dark;
     text-align: center;
     margin-top: 10.5px;
   }
