--- a/src/components/rich-checkbox/rich-checkbox.scss
+++ b/src/components/rich-checkbox/rich-checkbox.scss
@@ -11,7 +11,7 @@
     font-weight: bold;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $color-main-75;
+    color: $main-color-dark;
     cursor: pointer;
   }
   &__input {
@@ -20,7 +20,7 @@
     -moz-appearance: none;
     appearance: none;
     &:checked + .rich-checkbox__box {
-      border-color: $color-secondary;
+      border-color: $secondary-color;
     }
     &:checked + .rich-checkbox__box::before {
       content: '';
@@ -30,9 +30,9 @@
       width: 0.375rem;
       height: 0.5rem;
       border-width: 0 2px 2px 0;
-      -moz-border-image: $color-secondary-gradient;
-      -webkit-border-image: $color-secondary-gradient;
-      border-image: $color-secondary-gradient;
+      -moz-border-image: $secondary-color-gradient;
+      -webkit-border-image: $secondary-color-gradient;
+      border-image: $secondary-color-gradient;
       border-color: transparent;
       border-image-slice: 1;
       border-style: solid;
@@ -47,16 +47,16 @@
     height: 1.25rem;
     box-sizing: border-box;
     margin-left: -30px;
-    border: 1px solid $color-main-25;
+    border: 1px solid $main-color-light;
     border-radius: 4px;
     background-color: white;
   }
   &__description {
     padding-left: 30px;
     margin-top: 4px;
-    font-family: $font-main;
+    font-family: $main-font;
     font-size: 0.75rem;
     line-height: 0.875rem;
-    color: $color-main-50;
+    color: $main-color;
   }
 }
