--- a/src/components/search-room-card/search-room-card.scss
+++ b/src/components/search-room-card/search-room-card.scss
@@ -10,7 +10,7 @@
     padding: 40px 4.33vw 30px 4.33vw;
   }
   &__title {
-    font-family: $font-secondary-reserve;
+    font-family: $secondary-font-reserve;
     font-weight: bold;
     font-size: 1.5rem;
     margin-bottom: 20px;
