--- a/src/components/sign-up-card/sign-up-card.scss
+++ b/src/components/sign-up-card/sign-up-card.scss
@@ -9,7 +9,7 @@
     padding: 40px 4.33vw 30px 4.33vw;
   }
   &__title {
-    font-family: $font-secondary-reserve;
+    font-family: $secondary-font-reserve;
     font-weight: bold;
     font-size: 1.5rem;
     margin-bottom: 20px;
@@ -47,7 +47,7 @@
     z-index: 1;
   }
   &__sign-in-text {
-    font-family: $font-main;
+    font-family: $main-font;
     font-size: 0.875rem;
   }
 }
