--- a/src/components/text-button/text-button.scss
+++ b/src/components/text-button/text-button.scss
@@ -10,8 +10,8 @@
   padding: 0;
   cursor: pointer;
   user-select: none;
-  color: $color-secondary;
+  color: $secondary-color;
   &:hover {
-    color: $color-main-50;
+    color: $main-color;
   }
 }
