--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -6,7 +6,7 @@
     padding-left: 50px;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $color-main-50;
+    color: $main-color;
     cursor: pointer;
   }
   &__input {
@@ -15,7 +15,7 @@
     -moz-appearance: none;
     appearance: none;
     &:checked + .toggle__box {
-      border-color: $color-secondary;
+      border-color: $secondary-color;
     }
     &:checked + .toggle__box::before {
       content: '';
@@ -25,7 +25,7 @@
       width: 0.75rem;
       height: 0.75rem;
       border-radius: 10px;
-      background: $color-secondary-gradient;
+      background: $secondary-color-gradient;
       box-sizing: border-box;
     }
   }
@@ -35,7 +35,7 @@
     height: 1.25rem;
     box-sizing: border-box;
     margin-left: -50px;
-    border: 1px solid $color-main-25;
+    border: 1px solid $main-color-light;
     border-radius: 10px;
     background-color: white;
     &::before {
@@ -46,7 +46,7 @@
       width: 0.75rem;
       height: 0.75rem;
       // ниже градиент нужен, что бы при снятии чека кругляш не перерисовывался
-      background: linear-gradient($color-main-25, $color-main-25);
+      background: linear-gradient($main-color-light, $main-color-light);
       border-radius: 10px;
       box-sizing: border-box;
       transition-duration: 0.3s;
