--- a/src/components/type/type.scss
+++ b/src/components/type/type.scss
@@ -5,7 +5,7 @@
   &__name {
     min-width: 37px;
     text-align: right;
-    color: $color-main-25;
+    color: $main-color-light;
     font-weight: normal;
     &_font {
       &_H1 {
@@ -28,26 +28,26 @@
     &_font {
       &_H1 {
         font-size: 1.5rem;
-        font-family: $font-secondary;
+        font-family: $secondary-font;
         font-weight: bold;
-        color: $color-main-100;
+        color: $main-color-darker;
       }
       &_H2 {
         font-size: 1.1875rem;
-        font-family: $font-secondary;
+        font-family: $secondary-font;
         font-weight: bold;
-        color: $color-main-100;
+        color: $main-color-darker;
       }
       &_H3 {
         font-size: 0.75rem;
         font-weight: bold;
         text-transform: uppercase;
-        color: $color-main-100;
+        color: $main-color-darker;
       }
       &_body {
         font-size: 0.875rem;
         font-weight: normal;
-        color: $color-main-75;
+        color: $main-color-dark;
         line-height: 24px;
       }
     }
