--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,15 +1,15 @@
-$color-main-100: #1f2041;
-$color-main-75: rgba(31, 32, 65, 0.75);
-$color-main-50: rgba(31, 32, 65, 0.5);
-$color-main-25: rgba(31, 32, 65, 0.25);
-$color-main-1: rgba(31, 32, 65, 0.1);
-$color-main-05: rgba(31, 32, 65, 0.05);
-$color-secondary: #bc9cff;
-$color-secondary-gradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-$color-tertiary: #6fcf97;
-$color-tertiary-gradient: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+$main-color-darker: #1f2041;
+$main-color-dark: rgba(31, 32, 65, 0.75);
+$main-color: rgba(31, 32, 65, 0.5);
+$main-color-light: rgba(31, 32, 65, 0.25);
+$main-color-lighter: rgba(31, 32, 65, 0.1);
+$main-color-lightest: rgba(31, 32, 65, 0.05);
+$secondary-color: #bc9cff;
+$secondary-color-gradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+$tertiary-color: #6fcf97;
+$tertiary-color-gradient: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
 
-$font-main: Montserrat, arial, sans-serif;
-$font-secondary: Quicksand, arial, sans-serif;
-$font-secondary-reserve: Opensans, arial, sans-serif;
+$main-font: Montserrat, arial, sans-serif;
+$secondary-font: Quicksand, arial, sans-serif;
+$secondary-font-reserve: Opensans, arial, sans-serif;
 $material-icons: 'Material Icons';
