--- a/src/pages/websitePages/room-details/room-details.pug
+++ b/src/pages/websitePages/room-details/room-details.pug
@@ -35,10 +35,10 @@ block content
             .room-details__wrapper.room-details__wrapper_with-margin
               .room-details__diagram
               ul.room-details__list
-                li.room-details__el Великолепно
-                li.room-details__el Хорошо
-                li.room-details__el Удовлетворительно
-                li.room-details__el Разочарован
+                li.room-details__element Великолепно
+                li.room-details__element Хорошо
+                li.room-details__element Удовлетворительно
+                li.room-details__element Разочарован
         .room-details__wrapper
           .room-details__text Отзывы посетителей номера
           .room-details__num-of-comments 2 отзыва
