--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -2,4 +2,4 @@ mixin bullet-list({ bulletList })
 
   ul.bullet-list
     each item in bulletList
-      li.bullet-list__el= item
+      li.bullet-list__element= item
