--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  &__el {
+  &__element {
     position: relative;
     font-size: 0.875rem;
     line-height: 1.5rem;
