--- a/src/pages/websitePages/room-details/room-details.scss
+++ b/src/pages/websitePages/room-details/room-details.scss
@@ -76,7 +76,7 @@
     padding: 0;
     list-style-type: none;
   }
-  &__el {
+  &__element {
     position: relative;
     font-family: $main-font;
     font-size: 14px;
